# software-security-tt355

Lab1/: Lab1.docx  system-info-bash.sh  system-info-cpp.cpp
Lab2/: rle1.cpp  rle2.cpp
Lab3-4/: .gitignore  CMakeLists.txt  README.md
Lab3-4/include/: HardwareID.h  LicenseKey.h  LicenseManager.h
Lab3-4/src/: HardwareID.cpp  LicenseKey.cpp  LicenseManager.cpp  main.cpp
Lab5-6/: .gitignore  Lab5.sln  Lab5.vcxproj  Lab5.vcxproj.filters  README.md  UpgradeLog.htm
Lab5-6/src/: cipher.cpp  cipher.h  compression.cpp  compression.h  file_operations.cpp  file_operations.h  main.cpp  usb_detector.cpp  usb_detector.h  utils.cpp  utils.h
